// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTweetstormHandler BYPASS 1`] = `
Object {
  "data": Object {
    "message": "BYPASS",
  },
  "error": undefined,
  "meta": Object {
    "env": "test",
    "name": "tweries-api",
    "originalUrl": "/api/v1/mock",
    "timestamp": Any<Number>,
    "version": Any<String>,
  },
}
`;

exports[`useTweetstormHandler to match snapshot w/ error 1`] = `
Object {
  "data": Object {
    "statusIds": Array [
      "mock_id",
    ],
  },
  "error": [Error: Oh Noes!],
  "meta": Object {
    "env": "test",
    "name": "tweries-api",
    "originalUrl": "/api/v1/mock",
    "timestamp": Any<Number>,
    "version": Any<String>,
  },
}
`;

exports[`useTweetstormHandler to match snapshot w/ result 1`] = `
Object {
  "data": Object {
    "result": Object {
      "n": 1,
      "ok": 1,
    },
    "statusIds": Array [
      "mock_id",
    ],
  },
  "error": undefined,
  "meta": Object {
    "env": "test",
    "name": "tweries-api",
    "originalUrl": "/api/v1/mock",
    "timestamp": Any<Number>,
    "version": Any<String>,
  },
}
`;
